# duck

./: .rustfmt.toml  CONFIGURATION.md  Cargo.toml  LICENSE-MIT  LINTS.md  README.md
.github/: FUNDING.yml
.github/workflows/: duck.yml
archive/: gml.rs  regex.rs
assets/: misc_gml_constants.json  misc_gml_variables.json
benches/: benchmark.rs
cli/: input.rs  main.rs
src/: analysis.rs  clippie.rs  config.rs  core.rs  duck.rs  duck_operation.rs  duck_task.rs  fs.rs  gml.rs  issues.rs  lib.rs  lint.rs  lints.rs  parsing.rs  utils.rs
src/analysis/: global_scope.rs
src/analyze/: app.rs  constrain.rs  deref.rs  global_scope.rs  goals.rs  record.rs  scope.rs  solver.rs  term.rs  trait.rs  ty.rs  type.rs  type_utils.rs  types.rs  typewriter.rs  unify.rs  utils.rs
src/analyze/tests/: analysis.rs  error_tests.rs  type_tests.rs  utils.rs
src/core/: config.rs  driver.rs  duck.rs  duck_operation.rs  duck_task.rs
src/gml/: access.rs  assignment.rs  block.rs  call.rs  do_until.rs  enum.rs  environment.rs  equality.rs  evaluation.rs  for_loop.rs  function.rs  global_scope.rs  globalvar.rs  gml_collection.rs  gml_enum.rs  gml_switch.rs  grouping.rs  identifier.rs  if.rs  literal.rs  local_variable.rs  logical.rs  macro.rs  null_coalecence.rs  postfix.rs  repeat_loop.rs  return.rs  switch.rs  ternary.rs  try_catch.rs  unary.rs  while_loop.rs  with_loop.rs
src/lint/: collection.rs  lint.rs
src/lint/collection/: accessor_alternative.rs  and_preference.rs  anonymous_constructor.rs  assignment_to_call.rs  bool_equality.rs  casing_preference.rs  casing_rules.rs  collapsable_if.rs  condition_wrapper.rs  deprecated.rs  draw_sprite.rs  draw_text.rs  english_flavor_violation.rs  exit.rs  global.rs  invalid_assignment.rs  invalid_assignment_target.rs  invalid_comparison.rs  invalid_equality.rs  missing_case_member.rs  missing_default_case.rs  mod_preference.rs  multi_var_declaration.rs  no_space_begining_comment.rs  (+24 more)
src/lints/: accessor_alternative.rs  american.rs  and_keyword.rs  and_preference.rs  anonymous_constructor.rs  assignment_to_call.rs  bool_equality.rs  british.rs  collapsable_if.rs  constructor_without_new.rs  deprecated.rs  draw_sprite.rs  draw_text.rs  english_flavor_violation.rs  exit.rs  global.rs  globalvar.rs  missing_case_member.rs  missing_case_members.rs  missing_default_case.rs  mod_keyword.rs  mod_preference.rs  multi_var_declaration.rs  no_space_begining_comment.rs  non_constant_default_parameter.rs  non_pascal_case.rs  non_scream_case.rs  not_preference.rs  or_keyword.rs  or_preference.rs  room_goto.rs  show_debug_message.rs  single_switch_case.rs  statement_parenthetical_preference.rs  statement_parenthetical_violation.rs  statement_parentheticals.rs  suspicious_bool_usage.rs  suspicious_constant_usage.rs  todo.rs  too_many_arguments.rs  (+5 more)
src/parse/: ast.rs  lexer.rs  parse_error.rs  parser.rs  tests.rs  utils.rs
src/parsing/: ast.rs  expression.rs  gml.rs  lexer.rs  old_parser.rs  parser.rs  statement.rs  tests.rs  token.rs  token_pilot.rs  utils.rs
src/scope/: environment.rs
src/solve/: adt.rs  adt_prefabs.rs  global_std.rs  gml_std.rs  goals.rs  query.rs  solver.rs  ty.rs  unify.rs  utils.rs
tests/: ast_parsing.rs  expression_parsing.rs  statement_parsing.rs
tools/: lint_injector.py
(+90 files in other folders)
