[package]
name = "duck"
version = "0.1.0"
authors = ["Gabriel Weiner <imlazyeye@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imlazyeye/duck"
description = "A highly opinionated linter for GML. 🦆"

[lib]
name = "duck"
path = "src/lib.rs"

[[bin]]
name = "duck"
path = "bin/bin.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
enum-map = "2.0"
colored = "2"
heck = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
pretty_assertions = "1.1"
hex = "0.4"
unicode-segmentation = "1.9"
bimap = "0.6"
once_cell = "1.9"
clap = { version = "3.1.1", features = ["derive"] }
async-walkdir = "0.2"
itertools = "0.10"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
fnv = "1.0.3"
num-format = "0.4"
codespan-reporting = "0.11"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports", "async_tokio"] }