[package]
name = "duck"
version = "0.0.0"
authors = ["Gabriel Weiner <imlazyeye@gmail.com"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "http://duck.rs"
repository = "https://github.com/imlazyeye/duck"
description = "A fast and flexible linter for GML. 🦆"
categories = ["linter", "analyzer"]

[lib]
name = "duck"
path = "src/lib.rs"

[[bin]]
name = "duck"
path = "cli/main.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
enum-map = "2.0"
colored = "2"
heck = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
pretty_assertions = "1.1"
unicode-segmentation = "1.9"
bimap = "0.6"
once_cell = "1.9"
clap = { version = "3.1.15", features = ["derive", "cargo", "unicode"] }
async-walkdir = "0.2"
itertools = "0.10"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
hashbrown = { version = "0.12", features = ["serde"] }
num-format = "0.4"
codespan-reporting = "0.11"
rand = "0.8"
lazy_static = "1.4"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
maplit = "1.0"
regex = "1.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports", "async_tokio"] }

[features]
solve = []